Improved error handling logic

--- a/edit/config.json
+++ b/edit/config.json
@@ -19,3 +19,4 @@ Temporary commit content 175
 Temporary commit content 211
 Temporary commit content 218
 Temporary commit content 234
+Temporary commit content 235
