Optimized database queries

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -11,3 +11,4 @@ Temporary commit content 104
 Temporary commit content 106
 Temporary commit content 108
 Temporary commit content 131
+Temporary commit content 142
