Refactored code for better readability

--- a/edit/config.json
+++ b/edit/config.json
@@ -7,3 +7,4 @@ Temporary commit content 48
 Temporary commit content 53
 Temporary commit content 69
 Temporary commit content 90
+Temporary commit content 96
