Enhanced UI responsiveness

--- a/edit/config.json
+++ b/edit/config.json
@@ -14,3 +14,4 @@ Temporary commit content 121
 Temporary commit content 122
 Temporary commit content 135
 Temporary commit content 152
+Temporary commit content 153
