Fixed typos in documentation

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -21,3 +21,4 @@ Temporary commit content 224
 Temporary commit content 243
 Temporary commit content 245
 Temporary commit content 249
+Temporary commit content 268
