Updated README with new features

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -22,3 +22,4 @@ Temporary commit content 243
 Temporary commit content 245
 Temporary commit content 249
 Temporary commit content 268
+Temporary commit content 274
