--- a/edit/config.json
+++ b/edit/config.json
@@ -2,3 +2,4 @@ Temporary commit content 4
 Temporary commit content 7
 Temporary commit content 40
 Temporary commit content 44
+Temporary commit content 45
