Updated README with new features

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -14,3 +14,4 @@ Temporary commit content 131
 Temporary commit content 142
 Temporary commit content 185
 Temporary commit content 189
+Temporary commit content 200
