Optimized database queries

--- a/edit/config.json
+++ b/edit/config.json
@@ -21,3 +21,4 @@ Temporary commit content 218
 Temporary commit content 234
 Temporary commit content 235
 Temporary commit content 254
+Temporary commit content 276
