--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -8,3 +8,4 @@ Temporary commit content 77
 Temporary commit content 85
 Temporary commit content 95
 Temporary commit content 104
+Temporary commit content 106
