Updated README with new features

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -3,3 +3,4 @@ Temporary commit content 30
 Temporary commit content 55
 Temporary commit content 62
 Temporary commit content 68
+Temporary commit content 70
