Improved error handling logic

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -24,3 +24,4 @@ Temporary commit content 249
 Temporary commit content 268
 Temporary commit content 274
 Temporary commit content 287
+Temporary commit content 299
