--- a/edit/config.json
+++ b/edit/config.json
@@ -3,3 +3,4 @@ Temporary commit content 7
 Temporary commit content 40
 Temporary commit content 44
 Temporary commit content 45
+Temporary commit content 48
