Refactored code for better readability

--- a/edit/requirements.txt
+++ b/edit/requirements.txt
@@ -2,3 +2,4 @@ Temporary commit content 25
 Temporary commit content 30
 Temporary commit content 55
 Temporary commit content 62
+Temporary commit content 68
